--- a/css/styles.css
+++ b/css/styles.css
@@ -485,6 +485,39 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.32px;
 }
+
+.project-image-caption {
+    position: absolute;
+    background-color: rgba(77, 90, 229, 1);
+    color: var(--cloud);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+    
+}
+
+.project-image {
+    position: relative;
+}
+
+.project img{
+    display: block;
+    width: 100%;
+}
+
+.project-image-text {
+    width: 296px;
+    height: 96px;
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
+}
+
 /*End of Portfolio Images*/
 
 /*End of Portfolio Main Styling*/
