--- a/css/styles.css
+++ b/css/styles.css
@@ -343,8 +343,54 @@ background-color: var(--white);
     padding-top: 120px;
 }
 
+/*modal*/
+.backdrop {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
 
+}
 
+.modal {
+    width: 408px;
+    height: 584px;
+    background-color: var(--white);
+    border-radius: 4px;
+    padding: 24px;
+}
+
+.is-hidden {
+    pointer-events: none;
+    opacity: 0;
+}
+
+.modal-close-button {
+    border-radius: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--white);
+    width: 30px;
+    height: 30px;
+    color: var(--ocean);
+    margin-left: auto;
+    display: block;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-close-button:hover {
+    fill: currentColor;
+    border: 1px solid currentColor;
+}
 /* End of Hero styling */
 
 /*Footer Styling*/
@@ -488,7 +534,7 @@ ul {
 
 .project-image-caption {
     position: absolute;
-    background-color: rgba(77, 90, 229, 1);
+    background-color: rgba(77, 90, 229, .7);
     color: var(--cloud);
     width: 100%;
     height: 100%;
@@ -499,10 +545,13 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.32px;
     opacity: 0;
+    transform: translateY(100%);
+    transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-image {
     position: relative;
+    overflow: hidden;
 }
 
 .project img{
@@ -520,7 +569,12 @@ ul {
 
 .project:hover .project-image-caption{
     opacity: 1;
+    transform: translateY(0);
     
+}
+
+.project {
+    overflow: hidden;
 }
 /*End of Portfolio Images*/
 
